Hopefuly fixing contact table issue on mobile. Will test on full deployment

--- a/src/CSS/contacts.css
+++ b/src/CSS/contacts.css
@@ -114,6 +114,15 @@ body {
     font-size: 0.9em;
     margin-left: 10px;
   }
+
+  .table-wrapper {
+    overflow-x: auto;
+    width: 100%;
+  }
+
+  .table-wrapper table {
+    min-width: 600px;
+  }
 }
 
 /*body*/
